# senniors-brain-services

./: .env  .gitignore  Makefile  README.md  docker-compose.yml
docker/broker/: rabbitmq.config  rabbitmq_advanced.config
docker/src/: Dockerfile  (+4 more)
src/: .flake8  logging.conf  main.py  pyproject.toml  security.py  settings.py
src/brain_services/: data_loader.py  predictor.py
src/brain_services/tests/: test.csv  test_data_loader.py  test_predictor.py
src/brain_services/transformers/: __init__.py  base.py  clean_nan_values_transformer.py  data_frame_column_names_transformer.py  date_time_transformer.py  drop_unnecessary_data_transformer.py  extract_date_time_info_transformer.py  extract_days_between_dates_transformer.py  neighbourhood_transformer.py  remove_column_negative_values_transformer.py  swap_invalid_dates_transformer.py
src/brain_services/transformers/tests/: __init__.py  base_test_transformer.py  test_clean_nan_values_transformer.py  test_data_frame_column_names_transformer.py  test_date_time_transformer.py  test_drop_unnecessary_data_transformer.py  test_extract_date_time_info_transformer.py  test_extract_days_between_dates_transformer.py  test_remove_column_negative_values_transformer.py  test_swap_invalid_dates_transformer.py
src/celery_brain_services/: celery.py  celery_beat_schedule.py  celery_config.py
src/celery_brain_services/tasks/: settings.py  train_and_select_pipelines.py
src/celery_brain_services/tasks/tests/: test_train_and_select_pipelines.py
src/celery_brain_services/tests/: test_celery_worker.py
src/tests/: test_main.py
