[tool.poetry]
name = "brain-learn"
version = "0.1.0"
description = ""
authors = ["Martin Galdeano Cañizares <martingaldeca@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9, <3.11"
pandas = "^1.4.3"
scipy = "^1.8.1"
imbalanced-learn = "^0.9.1"
scikit-learn = "^1.1.1"
category-encoders = "^2.5.0"
Unidecode = "^1.3.4"
ipdb = "^0.13.9"
celery = "^5.2.7"
fastapi = "^0.78.0"
uvicorn = "^0.18.1"
joblib = "^1.1.0"
flake8 = "^4.0.1"
pytest = "^7.1.2"
kombu = "^5.2.4"
flower = "^1.0.0"
freezegun = "^1.2.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
